--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "be_capstone_upreach",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "18.7"
+  },
   "main": "Server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
