--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-jwt": "^8.4.1",
+    "express-session": "^1.17.3",
+    "express-flash": "^0.0.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
